yaml_configs/double-take/05-double-take-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: double-take
  namespace: double-take
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: double-take
