yaml_configs/double-take/04-double-take-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: double-take-ingress
  namespace: double-take
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: dt.jsuri.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: double-take
                port:
                  number: 3000
  tls:
  - hosts:
    - dt.jsuri.com # Change by your domain
    secretName: dt-jsuri-com-tls
